app/components/Molecules/RecipeCard/RecipeCard.module.css
.galleryContainer {
  column-gap: 20px;
  max-width: var(--max-width);
  margin: 20px;
}

.galleryItem {
  break-inside: avoid;
  margin-bottom: 20px;
  position: relative;
}

.recipeLink {
  display: flex;
}

.image {
  width: 100%;
}

.recipeDetails {
  display: flex;
  background: rgb(2, 2, 2, 0.6);
  flex-direction: column;
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  height: 100%;
  color: var(--white);
  justify-content: center;
  align-items: center;
  text-transform: capitalize;
  padding: 0 5px;
}

.recipeName {
  font-size: 25px;
  margin-bottom: 10px;
  text-align: center;
}

.recipeIconTextContainer {
  justify-content: flex-start;
  flex-direction: column;
  align-items: flex-start;
  display: none;
}

.recipeIcon {
  margin-right: 5px;
}

.recipeStatsContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 7px;
}

@media (min-width: 576px) {
  .image {
    max-width: 400px;
  }
}

@media (min-width: 768px) {
  .recipeDetails {
    display: none;
  }

  .galleryItem:hover {
    .recipeName {
      font-size: 20px;
    }

    .recipeDetails {
      display: flex;
    }

    .recipeIconTextContainer {
      display: flex;
    }
  }
}

@media (min-width: 1100px) {
  .galleryItem:hover {
    .recipeIconTextContainer {
      display: flex;
    }
  }
}

